--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,3 +32,6 @@ dependencies {
     compile 'com.journeyapps:zxing-android-embedded:3.0.2@aar'
     compile 'com.google.zxing:core:3.2.0'
 }
+dependencies {
+    compile 'com.android.support:support-v4:22.+'
+}
