--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".MainActivity"
+            android:theme="@style/MainTheme"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
             <intent-filter>
